--- a/pom.xml
+++ b/pom.xml
@@ -88,24 +88,7 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-<!--                <version>3.0.0-M1</version>-->
-                <version>2.21.0</version>
-                <configuration>
-                    <parallel>methods</parallel>
-                    <threadCount>1</threadCount>
-                    <perCoreThreadCount>false</perCoreThreadCount>
-<!--                    <useUnlimitedThreads>true</useUnlimitedThreads>-->
-                    <testFailureIgnore>true</testFailureIgnore>
-
-<!--                    Include not required-->
-<!--                    <includes>-->
-<!--                        <include>**/*Test.java</include>-->
-<!--                    </includes>-->
-                </configuration>
-            </plugin>
+            
             <plugin>
                 <groupId>net.masterthought</groupId>
                 <artifactId>maven-cucumber-reporting</artifactId>
@@ -138,6 +121,14 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+            	<groupId>org.apache.maven.plugins</groupId>
+            	<artifactId>maven-surefire-plugin</artifactId>
+            	<version>2.21.0</version>
+            	<configuration>
+				<excludes>testng.xml</excludes>
+				</configuration>
             </plugin>
         </plugins>
     </build>
